--- a/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
+++ b/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
@@ -4,6 +4,7 @@ hasFullText: true
 illust: 'coarse.png'
 illustClass: darkFilter
 date: 2021-04-29
+excerpt: "Entropy is a transversal notion to understand the Anthropocene, from physics to biology and social organizations. For the living, it requires a counterpart: anti-entropy."
 ---
 <!--CompileMaths-->
 
