--- a/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
+++ b/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
@@ -2,6 +2,7 @@
 illust: Lady-Montagu.jpg
 hasPDF: false
 hasFullText: false
+excerpt: "To provide a rational assessment of COVID-19 vaccines, we take a step back on both the history of this practice and how current theories in immunology understand it."
 tweets_mentions:
   - "1386328848158003212"
   - "1383076145051037701"
@@ -22,7 +23,7 @@ syndication:
      how current theories in immunology understand it. Both can contribute
      to providing a rational assessment of COVID-19 vaccines. This assessment
      cannot  consider  vaccine  as  an  isolated  procedure,  and  we  discuss  its
-     intergradation with the broader question of  knowledge and politics in
+     integration with the broader question of  knowledge and politics in
      the COVID-19 pandemic.
 </p>
   <p class="noindent"><span class="paragraphHead">keywords:</span>  epistemology, immunology, politics
