--- a/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
+++ b/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
@@ -5,6 +5,9 @@ illust: 'coarse.png'
 illustClass: darkFilter
 date: 2021-04-29
 excerpt: "Entropy is a transversal notion to understand the Anthropocene, from physics to biology and social organizations. For the living, it requires a counterpart: anti-entropy."
+syndication:
+  twitter:  "https://twitter.com/MMontevil/status/1394284708473806849"
+  mastodon: "https://scholar.social/web/statuses/106250795000708844"
 ---
 <!--CompileMaths-->
 
