fix purgecss + update

--- a/src/publications/articles/2012-LM-Inert-Vs-Living/index.njk
+++ b/src/publications/articles/2012-LM-Inert-Vs-Living/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: The physical singularity of life phenomena is analyzed by a comparison with the theories of the inert and focus on criticality, time, and anti-entropy.
+excerpt: The physical singularity of life phenomena is analyzed by a comparison with the theories of the inert with a focus on criticality, time, and anti-entropy.
 ---
 <p class="titleHead" id="the-inert-vs-the-living-state-of-matter-extended-criticality-time-geometry-anti-entropy-an-overview">The inert vs. the living state of matter: extended criticality, time geometry, anti-entropy – an overview</p>
 <p class="authors" >Giuseppe Longo<sup>1,2</sup>* and Maël Montévil<sup>3</sup>*</p>
