--- a/src/publications/articles/2012-LMP-Levels-Organization-Criticality/index.njk
+++ b/src/publications/articles/2012-LMP-Levels-Organization-Criticality/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: Critical phenomena disrupt the mathematical determination at a given level, which leads to a new perspective on levels of organization.
+excerpt: Critical phenomena disrupt the mathematical determination at a given level by couplings between scales, leading to a new perspective on levels of organization.
 ---
 
 <!--CompileMaths-->
