--- a/src/publications/articles/2013-LM-Extended-Criticality-Enablement/index.njk
+++ b/src/publications/articles/2013-LM-Extended-Criticality-Enablement/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: Biological evolution requires a continual change of the pertinent phase space which is unpredictable. We discuss enablement and constraints.
+excerpt: Biological evolution entails continual changes of the pertinent phase space, leading to unpredictability. We discuss causality as enablement by constraints.
 ---
 
 <!--CompileMaths-->
