--- a/src/publications/articles/2014-PM-Ecological-Models-Cells/index.njk
+++ b/src/publications/articles/2014-PM-Ecological-Models-Cells/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We discuss the perspective of intra-organismal ecology by investigating a family of ecological models. We consider first and second order models.
+excerpt: We discuss the perspective of intra-organismal ecology by investigating a family of models of niche construction. We consider first and second order models.
 illust: fig4.png
 illustClass: darkFilter
 ---
