--- a/src/publications/articles/2015-LMS-Search-Principles-Organisms/index.njk
+++ b/src/publications/articles/2015-LMS-Search-Principles-Organisms/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: Lacking an operational theory to explain the organization and behavior of matter in organisms hinders progress in biology. We propose hypothesis for such a theory.
+excerpt: Lacking an operational theory to understand life cycles hinders progress in biology. We discuss elements towards such a theory, such as inertia and thermodynamics.
 tags: 
     - historicity
 ---
