--- a/src/publications/articles/2015-MM-Organisation-Closure-Constraints/index.njk
+++ b/src/publications/articles/2015-MM-Organisation-Closure-Constraints/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We characterize biological organization as a closure of constraints, where constraints are distinguished from processes at a given time scale.
+excerpt: We characterize biological organization as a closure of constraints, where constraints are defined at a given time scale and are interdependent.
 illust: Closure_symmetries_webhtml-figure6-.png
 illustClass:  darkFilter
 tweets_mentions:
