--- a/src/publications/articles/2016-MMP-Theoretical-Principles-Variation/index.njk
+++ b/src/publications/articles/2016-MMP-Theoretical-Principles-Variation/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: Biological variation should be given the status of a fundamental theoretical principle in biology, which leads to randomness, historicity and contextuality.
+excerpt: Biological variation should be given the status of a fundamental theoretical principle in biology. Variation goes with randomness, historicity and contextuality.
 illust: figure-figure2.png
 illustClass:   darkFilter
 tags: 
