--- a/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
+++ b/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We propose a biological default state of proliferation with variation and motility by analogy with inertia. Then, quiescence requires an explanation.
+excerpt: We propose a biological default state of proliferation with variation and motility by analogy with physics inertia. Then, quiescence requires an explanation.
 illust: SotoDefault062416clean-img001.png
 illustClass: darkFilter
 tags: 
