--- a/src/publications/articles/2016-Theory-Morphogenesis/index.njk
+++ b/src/publications/articles/2016-Theory-Morphogenesis/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We propose a framework to model the behavior of cells in tissues and develop an application in the case of ductal morphogenesis.
+excerpt: We propose a theoretical framework to model the behavior of cells in tissues and develop an application in the case of duct morphogenesis in mammary glands.
 illust: acini-duct.png
 tags: 
     - mathematical model
