--- a/src/publications/articles/2019-LM-Extending-Criticality-Extended/index.njk
+++ b/src/publications/articles/2019-LM-Extending-Criticality-Extended/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We introduce our theoretical analysis in biology and show that symmetries play a radically different role in this discipline, by comparison with physics.
+excerpt: We show that symmetries play a radically different role in biology by comparison with physics. This article is an updated version of the 2011 paper.
 ---
 <!--CompileMaths-->
 
