--- a/src/publications/articles/2020-MM-Identity-Organism/index.njk
+++ b/src/publications/articles/2020-MM-Identity-Organism/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We address the identity of biological organisms in scientific practices by combining historical and relational, organizational conceptions.
+excerpt: We address the identity of biological organisms in scientific practices by combining relational and historical conceptions, and introduce a new symbol for that. 
 illust: figure-figure3a.png
 illustClass: darkFilter
 tags: 
