--- a/src/publications/articles/2016-MSS-Modeling-Organogenesis-Principles/index.njk
+++ b/src/publications/articles/2016-MSS-Modeling-Organogenesis-Principles/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: "We developed a mathematical model of mammary gland based on proper biological principles: the default state of cell and the principle of organization."
+excerpt: "We developed a mathematical model of mammary gland based on proper biological principles: the default state of cells and the principle of organization."
 illust: icon_video8b.jpg
 illustClass:  darkFilter
 tags: 
