--- a/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
+++ b/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
@@ -2,7 +2,7 @@
 illust: Lady-Montagu.jpg
 hasPDF: false
 hasFullText: false
-excerpt: "To provide a rational assessment of COVID-19 vaccines, we take a step back on both the history of this practice and how current theories in immunology understand it."
+excerpt: "To provide a rational assessment of COVID-19 vaccines, we take a step back on both the history of this practice and the current theories in immunology."
 tweets_mentions:
   - "1386328848158003212"
   - "1383076145051037701"
