--- a/src/redirects.njk
+++ b/src/redirects.njk
@@ -83,6 +83,7 @@ eleventyExcludeFromCollections: true
 /*/montevil_2012_geometrie-temps-biologique.pdf      /assets/pdf/2012-Montevil-Geometrie-Temps-Biologique.pdf        301
 /*/_montevil_2015_mathematiques-et-vivant.pdf      /assets/pdf/2015-Montevil-Symetrie-Objectivation-Vivant.pdf        301
 /*/montevil-entropy.pdf      /assets/pdf/2021-Montevil-Entropies-Anthropocene.pdf        301
+/assets/pdf/submitted-Montevil-Entropies-Anthropocene.pdf   /assets/pdf/2021-Montevil-Entropies-Anthropocene.pdf      301
 /*/montevil_method.pdf      /assets/pdf/2018-Montevil-Primer-Mathematical-Modeling.pdf        301
 /*/montevil-mossio_2015_closure-of-constraints.pdf      /assets/pdf/2015-MM-Organisation-Closure-Constraints.pdf        301
 /*/pm-montevil_2.pdf      /assets/pdf/2021-Montevil-Theory-Accuracy-Medicine.pdf        301
@@ -108,6 +109,7 @@ eleventyExcludeFromCollections: true
 /*/ecological-models-gene-therapy-ii-niche-construction-nongenetic-inheritance-and-ecosystem           /publications/articles/2014-PMF-Ecological-Models-Cells-Genes      301
 /*/ecological-models-gene-therapy-i-models-intraorganismal-ecology           /publications/articles/2014-PM-Ecological-Models-Cells      301
 /*/entropies-and-anthropocene-crisis           /publications/articles/2021-Montevil-Entropies-Anthropocene      301
+ /publications/articles/submitted-Montevil-Entropies-Anthropocene     /publications/articles/2021-Montevil-Entropies-Anthropocene      301
 /*/extended-criticality-phase-spaces-and-enablement-biology           /publications/articles/2013-LM-Extended-Criticality-Enablement      301
 /*/guide-cancer-critics-paradigms           /publications/articles/2017-MP-Hitchhikers-Guide-Cancer      301
 /en/hitchhiker-s-guide-cancer-galaxy-how-two-critics-missed-their-destination /publications/articles/2017-MP-Hitchhikers-Guide-Cancer      301
