--- a/assets/sass/critical.scss
+++ b/assets/sass/critical.scss
@@ -6,6 +6,9 @@
 @use 'global/accessibility';
 @use 'global/fonts';
 @use 'components/avatar';
+@use 'components/card';
+@use 'components/pubcards';
+
 @use 'components/header';
 @use 'components/navigation';
 @use 'components/link';
