--- a/src/redirects.njk
+++ b/src/redirects.njk
@@ -29,13 +29,13 @@ eleventyExcludeFromCollections: true
 
 /*/content/about-me    /about/    301
 
-/*/content/sama     /publications/varia/2016-pms-sama-method-morphometry/    301
-/*/content/sama-images /posts/sama-doc/sama-images/  301
-/*/content/installation-sama    /posts/sama-doc/installation/    301
-/*/content/chrono-thematic-map-published-works    /about/map.html    301
+/*content/sama     /publications/varia/2016-pms-sama-method-morphometry/    301
+/*content/sama-images /posts/sama-doc/sama-images/  301
+/*content/installation-sama    /posts/sama-doc/installation/    301
+/*content/chrono-thematic-map-published-works    /about/map.html    301
 
-/*/contents/publications /all/publications/ 301
-/*/content/videos-modeling-mammary-organogenesis-biological-first-principles-cells-and-their-physical  /publications/articles/2016-mss-modeling-organogenesis-principles/  301
+/*contents/publications /all/publications/ 301
+/*content/videos-modeling-mammary-organogenesis-biological-first-principles-cells-and-their-physical  /publications/articles/2016-mss-modeling-organogenesis-principles/  301
 
 
 # pdf
