--- a/src/_includes/macros/postCard.njk
+++ b/src/_includes/macros/postCard.njk
@@ -16,6 +16,7 @@
     type = 'post',
     lang = article.data.lang,
     title = article.data.title,
+    illustration = article.data.illustration,
     url = article.url,
     content = content,
     meta = meta) }}
