--- a/assets/sass/critical.scss
+++ b/assets/sass/critical.scss
@@ -1035,3 +1035,9 @@ details > summary {
 #page1-div>a:hover{
   background-color: transparent;
 }
+.welcome__tags {
+  font-size: var(--font-size-l);
+}
+.sc {
+  font-variant: small-caps;
+}
