--- a/src/_includes/archiveTOC.njk
+++ b/src/_includes/archiveTOC.njk
@@ -53,7 +53,7 @@
       <div id="dates-menu{{append}}" class="ais-Panel">
           
       
-        {% block dates %}
+         {#{% block dates %}#}
       
             <div class="ais-Panel-header">Dates</div>
             
@@ -76,7 +76,7 @@
             <p class=""><a href="/publications/publicationsbyYear/">Complete Publication list by year</a></p>       
             <p class=""><a class="center" href="{% link_to "map" %}"> Thematic map of  publications</a></p>
           </div>
-        {% endblock %}
+     {#   {% endblock %}#}
      
     {#<div id="langs-list"></div>#}
     </div>
