--- a/src/index.njk
+++ b/src/index.njk
@@ -35,7 +35,7 @@ JSON-LD for:
   I am a <em> theoretical biologist</em> working at the crossroads of <span class="">experimental biology</span>, <span class="">mathematics</span>, and <span class="">philosophy</span>. I also work on the Anthropocene,
       among <a href="/tags/">many other interests</a>.
     </p>
-    
+
     
  <div class="hidden">
 {% for entry in websiteid.sameAs %}
@@ -54,6 +54,11 @@ JSON-LD for:
 I work in  
  <a class="p-org h-card" href="https://www.ihpst.cnrs.fr/"> IHPST</a>, <a class="p-org h-card" href="https://www.pantheonsorbonne.fr/">Université Paris I Panthéon Sorbonne</a> and in <a class="p-org h-card" href="https://www.iri.centrepompidou.fr/">Institut de Recherche et d'Innovation</a>.
 </p>
+
+    <p class="">
+   <span class="sc"> Key concepts:</span> <a href="/tags/historicity">historicity</a>,  <a href="/tags/organization">organization</a> as <a href="/tags/closure">closure</a> of <a href="/tags/constraints">constraints</a>, <a href="/tags/anti-entropy">anti-entropy</a>, <a href="/tags/symmetry">symmetry changes</a>, <a href="/tags/measurement">biological measurement</a>, <a href="/tags/disruption">disruption</a>
+    </p>
+
 </div>
 
 
