--- a/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
+++ b/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
@@ -7,6 +7,7 @@ tags:
     - agency
     - proliferation
     - motility
+    - constraints
 ---
 <p class="titleHead" id="the-biological-default-state-of-cell-proliferation-with-variation-and-motility-a-fundamental-principle-for-a-theory-of-organisms">The biological default state of cell proliferation with variation and motility, a fundamental principle for a theory of organisms</p>
 <p class="authors" >Ana M. Soto, Giuseppe Longo, Maël Montévil and Carlos Sonnenschein</p>
