--- a/src/publications/articles/2016-Theory-Morphogenesis/index.njk
+++ b/src/publications/articles/2016-Theory-Morphogenesis/index.njk
@@ -8,6 +8,7 @@ tags:
     - acinus
     - ducts
     - mammary glands
+    - constraints
 ---
 
 <p class="titleHead" id="theoretical-approach-of-ductal-morphogenesis">Theoretical approach of ductal morphogenesis</p>
