--- a/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
+++ b/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
@@ -11,6 +11,12 @@ tweets_mentions:
 syndication:
   twitter:  "https://twitter.com/MMontevil/status/1383438858604351506"
   mastodon: "https://scholar.social/web/statuses/106081393591291094"
+tags: 
+    - vaccine
+    - knowledge
+    - "COVID-19"
+    - immunology
+    - theory
 ---
 <p class="titleHead">Vaccines, Germs, and Knowledge </p>
 <p class="authors">Maël Montévil</p>
@@ -295,11 +301,7 @@ nature. The theories mentioned above only make sense for homolog immune systems,
 namely mammals immune systems, because they do not embed the historical and,
 therefore, partly contingent nature of the immune system’s organization. In other
 words, they typically investigate common aspects of mammals’ immune
-systems and some variations of these common aspects. For example, the
-                                                                  
-
-                                                                  
-self/non-self distinction only makes (limited) sense for mammals’ acquired
+systems and some variations of these common aspects. For example, the self/non-self distinction only makes (limited) sense for mammals’ acquired
 immune system (the notion can be extended to the jawed vertebrates at
 best).
 </p><!-- l. 344 --><p class='indent'>   By contrast, if we start again from the immune function, humans display
