--- a/src/talks/bib-based.njk
+++ b/src/talks/bib-based.njk
@@ -26,7 +26,7 @@ eleventyComputed: {
   abstract: "{{bibentryconf.fields.abstract |safe}}",
   program: "{{bibentryconf.fields.program}}",
   video: "{{bibentryconf.fields.video}}",
-  poster: "{{bibentryconf.fields.poster}}"
+  poster: "{{bibentryconf.fields.poster}}",
   }
 }
 ---
