--- a/src/_includes/macros/meta.njk
+++ b/src/_includes/macros/meta.njk
@@ -84,16 +84,12 @@
         </a>
       </li>
     {% endif %}
-    {% set mentions = item.url | getWebmentionsForUrl %}
-    {% set mentionsSize = mentions | size %}
-    {% if  item.data.gsentry and item.data.gsentry[1]%}
-    {% set mentionsSize = mentionsSize+item.data.gsentry[1].length %}
-    {% endif %}
+  
     
-    {% if mentionsSize > 0 %}
+    {% if item.data.allMentionsSize > 0 %}
       <li class="webmentions meta__item meta__count">
         {% icon "comments", "Webmentions" %}
-        <a href="{{ item.url }}#webmentions">{{ mentionsSize }} mention{% if mentionsSize > 1 %}s{% endif %}
+        <a href="{{ item.url }}#webmentions">{{ item.data.allMentionsSize }} mention{% if item.data.allMentionsSize > 1 %}s{% endif %}
         </a>
       </li>
     {% endif %}
