--- a/src/_includes/components/webmentions.njk
+++ b/src/_includes/components/webmentions.njk
@@ -31,6 +31,10 @@ or
 <a class="buttonlink{%if syndication.mastodon%} u-syndication{%endif%}" href="{{syndication.mastodon}}" rel="noopener" {%if syndication.mastodon%}rel="syndication"{%endif%} target="_blank">{% icon "mastodon", "mastodon" %} Mastodon</a>
 {%endif %}</p>
 
+
+
+
+
 {% if citationSize > 0 %}
   <details class="mention">
    <summary> <h3 > {{ citationSize }} citation{% if citationSize > 1 %}s{% endif %} </h3></summary> 
@@ -40,17 +44,18 @@ or
 
 
 {% if likesSize > 0 %}
-  <details class="mention"> <summary>
-    <h3>{{ likesSize }} like{% if likesSize > 1 %}s{% endif %}</h3>
-    </summary> 
+  {#<details class="mention"> <summary>#} 
+    <h3 class="mentionsHeader">{{ likesSize }} like{% if likesSize > 1 %}s{% endif %}</h3>
+  {#  </summary> #} 
     {% include "components/webmentions/likes.njk" %}
   </details>
 {% endif %}
 
 
 {% if repostsSize > 0 %}
-  <details class="mention"> <summary>
-    <h3>{{ repostsSize }} repost{% if repostsSize > 1 %}s{% endif %}</h3></summary> 
+ {# <details class="mention"> <summary>#} 
+    <h3 class="mentionsHeader">{{ repostsSize }} repost{% if repostsSize > 1 %}s{% endif %}</h3>
+   {# </summary> #} 
     {% include "components/webmentions/reposts.njk" %}
   </details>
 {% endif %}
