--- a/src/index.njk
+++ b/src/index.njk
@@ -56,7 +56,7 @@ I work in
 </p>
 
     <p class="">
-   <span class="sc"> Key concepts:</span> <a href="/tags/historicity">historicity</a>,  <a href="/tags/organization">organization</a> as <a href="/tags/closure">closure</a> of <a href="/tags/constraints">constraints</a>, <a href="/tags/anti-entropy">anti-entropy</a>, <a href="/tags/symmetry">symmetry changes</a>, <a href="/tags/measurement">biological measurement</a>, <a href="/tags/disruption">disruption</a>
+   <span class="sc"> Key concepts:</span> <a href="/tags/historicity">historicity</a>,  <a href="/tags/organization">organization</a> as <a href="/tags/closure">closure</a> of <a href="/tags/constraints">constraints</a>, <a href="/tags/anti-entropy">anti-entropy</a>, <a href="/tags/symmetries">symmetry changes</a>, <a href="/tags/measurement">biological measurement</a>, <a href="/tags/disruption">disruption</a>
     </p>
 
 </div>
@@ -169,7 +169,7 @@ I work in
   {% endfor %}
 </li>
 </ol>
-<p class="more wrap">Discover <a href="/links/">all links</a>…</p>
+<p class="more wrap">Discover <a href="/all/links/">all links</a>…</p>
 
 
 
